--- a/src/styles.css
+++ b/src/styles.css
@@ -43,9 +43,7 @@ small {
   text-shadow: 1px 2px 1px #000;
   font-size: 22px;
 }
-.clearfix {
-  display: flex;
-}
+
 .Users-data-weather {
   margin: 0px 25px;
   padding: 0;
@@ -54,8 +52,15 @@ small {
   text-transform: capitalize;
 }
 .units {
-  font-size: 36px;
+  font-size: 18px;
+  position: relative;
+  top: -15px;
 }
+
+.units a {
+  text-decoration: none;
+}
+
 .form-field {
   margin-left: 52px;
   width: 85%;
@@ -94,7 +99,17 @@ small {
 }
 
 .Weather-temperature {
+  display: flex;
   margin-left: 55px;
+}
+
+.Weather-temperature .active {
+  color: rgb(229, 211, 185);
+  text-shadow: 1px 1px 1px #000;
+  cursor: default;
+}
+.Weather-temperature .active:hover {
+  text-decoration: none;
 }
 
 .Apps-container {
