--- a/src/styles.css
+++ b/src/styles.css
@@ -10,7 +10,7 @@ h1 {
   font-weight: 700;
   line-height: 38px;
   padding: 0;
-  margin: 0 0 0 30px;
+  margin: 20px 0 0 30px;
 }
 strong {
   font-size: 36px;
@@ -18,7 +18,7 @@ strong {
 small {
   color: #000;
   position: fixed;
-  bottom: 25px;
+  bottom: 10px;
   left: 15px;
   font-weight: 400;
   font-size: 12px;
@@ -71,7 +71,7 @@ small {
   background-color: transparent;
   color: rgb(229, 211, 185);
   text-shadow: 1px 1px 1px #000;
-  border: 1.5px solid rgb(229, 211, 185);
+  border: 2px solid #000;
   border-radius: 5px;
   box-shadow: 9px 9px 5px rgb(229, 211, 185);
 }
@@ -79,7 +79,7 @@ small {
   background-color: transparent;
   color: rgb(229, 211, 185);
   text-shadow: 1px 2px 1px #000;
-  border: 1.5px solid rgb(229, 211, 185);
+  border: 2px solid #000;
   border-radius: 5px;
   box-shadow: 9px 9px 5px rgb(229, 211, 185);
 }
@@ -123,7 +123,7 @@ small {
 
 .Weather-app {
   padding: 20px;
-  border: 1.5px solid rgb(229, 211, 185);
+  border: 3px solid #000;
   border-radius: 5px;
   box-shadow: 9px 9px 5px rgb(229, 211, 185);
 }
